<resources>
    <string name="app_name">Sudoku</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>

    <string name="solve">Solve</string>
    <string name="clear">Clear</string>
    <string name="new_game">New Game</string>



    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Expert</item>
        <item>Master</item>
    </string-array>

</resources>